--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -337,6 +337,7 @@ Darafsheh.
 \input{Interpret}
 \input{Language}
 \input{example}
+\input{Conclusion}
 \addcontentsline{toc}{section}{References}
 \bibliographystyle{alpha}
 \bibliography{mybib}
